--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
       <img src="./img/logo.webp" alt="" />
       <ul class="hedar-menu">
         <li><a href="">Home</a></li>
-        <li><a href="">Pages <i class="fa-solid fa-caret-down"></i></a></li>
-        <li><a href="">Services <i class="fa-solid fa-caret-down"></i></a></li>
+        <li>
+          <a href="">Pages <i class="fa-solid fa-caret-down"></i></a>
+        </li>
+        <li>
+          <a href="">Services <i class="fa-solid fa-caret-down"></i></a>
+        </li>
         <li><a href="">Portfolio</a></li>
-        <li><a href="">Blog <i class="fa-solid fa-caret-down"></i></a></li>
+        <li>
+          <a href="">Blog <i class="fa-solid fa-caret-down"></i></a>
+        </li>
         <li><a href="">Contact</a></li>
       </ul>
 
@@ -33,11 +39,46 @@
             <i class="fas fa-arrow-up-right-from-square"></i>
           </span>
         </button>
-
-        <div class="hemburgur">
+        <a href="#myModal" class="open-button hemburgur">
           <span class="line line1"></span>
           <span class="line line2"></span>
           <span class="line line3"></span>
+        </a>
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <img src="./img/logo-2.webp" alt="" />
+            <p>
+              Developing personalize our customer journeys to increase
+              satisfaction & loyalty of our expansion recognized by industry
+              leaders.
+            </p>
+            <h1>Search Now!</h1>
+            <div class="hem-serch">
+              <input type="search" placeholder=" Search here..." />
+              <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+            </div>
+            <h1 class="hem-con">Contact Info</h1>
+            <div class="contect-item">
+              <span>Phone</span><br />
+              <a href="">808-909-1313</a>
+            </div>
+            <div class="contect-item">
+              <span>Email</span><br />
+              <a href="">info@bexon.com</a>
+            </div>
+            <div class="contect-item">
+              <span>Location</span><br />
+              <a href="">993 Renner Burg, West Rond, MT 94251-030</a>
+            </div>
+            <h1 class="hem-h5">Follow Us</h1>
+            <div class="ham-footer">
+              <i class="fa-brands fa-facebook fa-2x"></i>
+              <i class="fa-brands fa-instagram fa-2x"></i>
+              <i class="fa-brands fa-x-twitter fa-2x"></i>
+              <i class="fa-brands fa-linkedin fa-2x"></i>
+            </div>
+            <a href="#" class="close-button">×</a>
+          </div>
         </div>
       </div>
     </div>
