--- a/index.html
+++ b/index.html
@@ -118,6 +118,92 @@
         <div id="myModal" class="modal">
           <div class="modal-content">
             <img src="./img/logo-2.webp" alt="" />
+            <div class="modal-menu">
+              <ul class="header-menu">
+                <li class="dropdown">
+                  <a href="#">Home</a>
+                </li>
+                <li class="dropdown">
+                  <a href="#"
+                    >Pages
+                    <svg
+                      class="nav-drop-svg"
+                      width="20px"
+                      height="20px"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M7 10L12 15L17 10"
+                        stroke="currentColor"
+                        stroke-width="2.4"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </a>
+                  <ul class="dropdown-content">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">FAQ</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown">
+                  <a href="#"
+                    >Services
+                    <svg
+                      class="nav-drop-svg"
+                      width="20px"
+                      height="20px"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M7 10L12 15L17 10"
+                        stroke="currentColor"
+                        stroke-width="2.4"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </a>
+                  <ul class="dropdown-content">
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="#">Development</a></li>
+                    <li><a href="#">Marketing</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown"><a href="#">Portfolio</a></li>
+                <li class="dropdown">
+                  <a href="#"
+                    >Blog
+                    <svg
+                      class="nav-drop-svg"
+                      width="20px"
+                      height="20px"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M7 10L12 15L17 10"
+                        stroke="currentColor"
+                        stroke-width="2.4"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </a>
+                  <ul class="dropdown-content">
+                    <li><a href="#">Latest Posts</a></li>
+                    <li><a href="#">Categories</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown"><a href="#">Contact</a></li>
+              </ul>
+            </div>
             <p>
               Developing personalize our customer journeys to increase
               satisfaction & loyalty of our expansion recognized by industry
@@ -148,7 +234,39 @@
               <i class="fa-brands fa-x-twitter fa-2x"></i>
               <i class="fa-brands fa-linkedin fa-2x"></i>
             </div>
-            <a href="#" class="close-button"><i class="fa-solid fa-x"></i></a>
+            <a href="#" class="close-button"
+              ><svg
+                width="25px"
+                height="25px"
+                class="close-svg-icon"
+                viewBox="-0.5 0 25 25"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                <g
+                  id="SVGRepo_tracerCarrier"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></g>
+                <g id="SVGRepo_iconCarrier">
+                  <path
+                    d="M3 21.32L21 3.32001"
+                    stroke="#FFFFFF"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                  <path
+                    d="M3 3.32001L21 21.32"
+                    stroke="#FFFFFF"
+                    stroke-width="1.5"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </g>
+              </svg>
+            </a>
           </div>
         </div>
       </div>
