--- a/index.html
+++ b/index.html
@@ -148,12 +148,9 @@
                     </svg>
                   </label>
                   <ul class="accordion-content">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#">Team</a></li>
-                    <li><a href="#">Team Details</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Pricing Page</a></li>
-                    <li><a href="#">Error 404</a></li>
                   </ul>
                 </li>
                 <li class="accordion-item">
@@ -181,14 +178,10 @@
                     </svg>
                   </label>
                   <ul class="accordion-content">
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Services Details</a></li>
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="#">Development</a></li>
+                    <li><a href="#">Marketing</a></li>
                   </ul>
-                </li>
-                <li class="accordion-item">
-                  <label for="acc-portfolio" class="accordion-label">
-                    Portfolio
-                  </label>
                 </li>
                 <li class="accordion-item">
                   <input
@@ -215,9 +208,14 @@
                     </svg>
                   </label>
                   <ul class="accordion-content">
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Blog Details</a></li>
+                    <li><a href="#">Latest Posts</a></li>
+                    <li><a href="#">Categories</a></li>
                   </ul>
+                </li>
+                <li class="accordion-item">
+                  <label for="acc-portfolio" class="accordion-label">
+                    Portfolio
+                  </label>
                 </li>
                 <li class="accordion-item no-submenu">
                   <a href="#" class="accordion-label">Contact</a>
@@ -297,6 +295,47 @@
          <i class="fa-solid fa-magnifying-glass fa-2x"></i>
       </div> 
     </div> -->
+    <div class="secand container">
+      <div class="secand-1">
+        <div class="secand-1-top">
+          <svg fill="currentColor" height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 430.214 430.214" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M327.005,39.943H103.208L0,156.118l215.107,234.152l215.107-234.152L327.005,39.943z M148.882,145.943l-30.906-91h196.266 l-31.5,91H148.882z M277.55,160.943l-62.375,180.195l-61.198-180.195H277.55z M133.041,145.943H29.104l75.192-84.639 L133.041,145.943z M138.135,160.943l66.473,195.727L24.801,160.943H138.135z M293.423,160.943h111.99L225.711,356.555 L293.423,160.943z M298.615,145.943l28.739-83.023l73.756,83.023H298.615z"></path> </g></svg>
+          <h3>RECOGNIZED FOR EXCELLENCE</h3>
+        </div>
+        <h1>
+          Driving Excellence<br />
+          Through Evolution <br />
+          and<span> Trust.</span>
+        </h1>
+        <div class="secand-1-bottom">
+          <div class="animetion"></div>
+          <p>
+            Represents growth, expansion, and modern<br> business solution present
+            growth,<br> expansion.
+          </p>
+        </div>
+      </div>
+      <div class="secand-2">
+        <img src="./img/hero-img.webp" alt="" />
+        <div class="border-top-right">
+          <div class="secand-2-ph">
+            <div class="images-2">
+              <img src="./img/client-1.webp" alt="" />
+              <img src="./img/client-2.webp" alt="" />
+              <img src="./img/client-3.webp" alt="" />
+              <div class="image-icon">
+                <i class="fa-solid fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <h2>30K</h2>
+            <p>
+              Happy customer we have<br />
+              world-wide.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("myModal");
