--- a/index.html
+++ b/index.html
@@ -599,6 +599,327 @@
       </div>
     </div>
 
+    <div class="ditels container">
+      <div class="ditels-top">
+        <div class="ditels-hader">
+          <div class="ditels-1">
+            <svg
+              fill="currentColor"
+              height="200px"
+              width="200px"
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 430.214 430.214"
+              xml:space="preserve"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M327.005,39.943H103.208L0,156.118l215.107,234.152l215.107-234.152L327.005,39.943z M148.882,145.943l-30.906-91h196.266 l-31.5,91H148.882z M277.55,160.943l-62.375,180.195l-61.198-180.195H277.55z M133.041,145.943H29.104l75.192-84.639 L133.041,145.943z M138.135,160.943l66.473,195.727L24.801,160.943H138.135z M293.423,160.943h111.99L225.711,356.555 L293.423,160.943z M298.615,145.943l28.739-83.023l73.756,83.023H298.615z"
+                ></path>
+              </g>
+            </svg>
+            <h3>Our Solutions</h3>
+          </div>
+          <h2>
+            Solutions to Transform<br />
+            Your<br />
+            <span class="ditels-h2">Business.</span>
+          </h2>
+        </div>
+        <div class="swiper1">
+          <div class="swiper-slide">
+            <div class="service-item">
+              <img src="./img/service-1.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Business Strategy Development</h4>
+              </div>
+              <div class="service-content">
+                <h4>Business Strategy Development</h4>
+                <p>
+                  Through a combination of data-driven insights and innovative
+                  approaches, we work closely with you to develop customized.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-2.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Customer Experience Solutions</h4>
+              </div>
+              <div class="service-content">
+                <h4>Customer Experience Solutions</h4>
+                <p>
+                  Developing personalized customer journeys to increase
+                  satisfaction and loyalty of our expansion to keep competitive.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-3.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Sustainability and ESG Consulting</h4>
+              </div>
+              <div class="service-content">
+                <h4>Sustainability and ESG Consulting</h4>
+                <p>
+                  Provide tailored strategies that not only drive long-term
+                  value but also build trust with stakeholders, investors.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-4.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Training and Development Programs</h4>
+              </div>
+              <div class="service-content">
+                <h4>Training and Development Programs</h4>
+                <p>
+                  Training and Development Programs are designed to empower
+                  employees with the skills, knowledge, and tools they need.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+             <div class="service-item">
+              <img src="./img/service-1.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Business Strategy Development</h4>
+              </div>
+              <div class="service-content">
+                <h4>Business Strategy Development</h4>
+                <p>
+                  Through a combination of data-driven insights and innovative
+                  approaches, we work closely with you to develop customized.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-2.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Customer Experience Solutions</h4>
+              </div>
+              <div class="service-content">
+                <h4>Customer Experience Solutions</h4>
+                <p>
+                  Developing personalized customer journeys to increase
+                  satisfaction and loyalty of our expansion to keep competitive.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-3.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Sustainability and ESG Consulting</h4>
+              </div>
+              <div class="service-content">
+                <h4>Sustainability and ESG Consulting</h4>
+                <p>
+                  Provide tailored strategies that not only drive long-term
+                  value but also build trust with stakeholders, investors.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-4.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Training and Development Programs</h4>
+              </div>
+              <div class="service-content">
+                <h4>Training and Development Programs</h4>
+                <p>
+                  Training and Development Programs are designed to empower
+                  employees with the skills, knowledge, and tools they need.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+             <div class="service-item">
+              <img src="./img/service-1.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Business Strategy Development</h4>
+              </div>
+              <div class="service-content">
+                <h4>Business Strategy Development</h4>
+                <p>
+                  Through a combination of data-driven insights and innovative
+                  approaches, we work closely with you to develop customized.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-2.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Customer Experience Solutions</h4>
+              </div>
+              <div class="service-content">
+                <h4>Customer Experience Solutions</h4>
+                <p>
+                  Developing personalized customer journeys to increase
+                  satisfaction and loyalty of our expansion to keep competitive.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-3.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Sustainability and ESG Consulting</h4>
+              </div>
+              <div class="service-content">
+                <h4>Sustainability and ESG Consulting</h4>
+                <p>
+                  Provide tailored strategies that not only drive long-term
+                  value but also build trust with stakeholders, investors.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="./img/service-4.webp" alt="" />
+
+              <div class="service-icon">
+                <div class="icon-1">
+                  <i class="fa-brands fa-servicestack fa-4x"></i>
+                </div>
+                <h4 class="icon-none">Training and Development Programs</h4>
+              </div>
+              <div class="service-content">
+                <h4>Training and Development Programs</h4>
+                <p>
+                  Training and Development Programs are designed to empower
+                  employees with the skills, knowledge, and tools they need.
+                </p>
+                <div class="text-btn">
+                  <h3>Learn More</h3>
+                  <span class="errv">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+   
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("myModal");
