--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                 </div>
               </div>
             </div>
-             <div class="service-item">
+            <div class="service-item">
               <img src="./img/service-1.webp" alt="" />
 
               <div class="service-icon">
@@ -820,7 +820,7 @@
                 </div>
               </div>
             </div>
-             <div class="service-item">
+            <div class="service-item">
               <img src="./img/service-1.webp" alt="" />
 
               <div class="service-icon">
@@ -916,9 +916,53 @@
         </div>
       </div>
     </div>
-
-    
-   
+    <div class="portfolio">
+      <div class="portfolio-main">
+        <div class="portfolio-m-text">
+          <div class="portfolio-hedar-1">
+            <svg
+              fill="currentColor"
+              height="200px"
+              width="200px"
+              version="1.1"
+              id="Capa_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 430.214 430.214"
+              xml:space="preserve"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M327.005,39.943H103.208L0,156.118l215.107,234.152l215.107-234.152L327.005,39.943z M148.882,145.943l-30.906-91h196.266 l-31.5,91H148.882z M277.55,160.943l-62.375,180.195l-61.198-180.195H277.55z M133.041,145.943H29.104l75.192-84.639 L133.041,145.943z M138.135,160.943l66.473,195.727L24.801,160.943H138.135z M293.423,160.943h111.99L225.711,356.555 L293.423,160.943z M298.615,145.943l28.739-83.023l73.756,83.023H298.615z"
+                ></path>
+              </g>
+            </svg>
+            <h3>Get to Know Us</h3>
+          </div>
+          <h2>
+            Breaking Boundaries,<br> Building
+            <span>Dreams.</span>
+          </h2>
+          <p>
+            We work closely with our clients to understand <br>their unique needs
+            and craft tailored solutions <br>that address challenges.
+          </p>
+          <button class="portfolio-btn">
+            <h4>More Projects</h4>
+            <span class="arew">
+              <i class="fa-solid fa-arrow-right"></i>
+            </span>
+          </button>
+        </div>
+        <div class="portfolio-m-img"></div>
+      </div>
+    </div>
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
