--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
         </div>
       </div>
     </div>
-    <div class="portfolio">
+    <div class="portfolio container">
       <div class="portfolio-main">
         <div class="portfolio-m-text">
           <div class="portfolio-hedar-1">
@@ -945,22 +945,83 @@
             </svg>
             <h3>Get to Know Us</h3>
           </div>
-          <h2>
-            Breaking Boundaries,<br> Building
-            <span>Dreams.</span>
-          </h2>
-          <p>
-            We work closely with our clients to understand <br>their unique needs
-            and craft tailored solutions <br>that address challenges.
-          </p>
-          <button class="portfolio-btn">
-            <h4>More Projects</h4>
-            <span class="arew">
-              <i class="fa-solid fa-arrow-right"></i>
-            </span>
-          </button>
+          <div class="portfolio-hedar">
+            <h2>
+              Breaking Boundaries,<br />
+              Building
+              <span>Dreams.</span>
+            </h2>
+
+            <p>
+              We work closely with our clients to understand <br />their unique
+              needs and craft tailored solutions <br />that address challenges.
+            </p>
+            <button class="portfolio-btn">
+              <h4>More Projects</h4>
+              <span class="arew">
+                <i class="fa-solid fa-arrow-right"></i>
+              </span>
+            </button>
+          </div>
         </div>
-        <div class="portfolio-m-img"></div>
+        <div class="portfolio-m-img">
+          <div class="portfolio-div1">
+            <img src="./img/project-1.webp" alt="" />
+            <div class="portfolio-div-text">
+              <span class="connect">Connect</span>
+              <div class="txt-bottom">
+                <h4>Event Management<br> Platform</h4>
+                <div class="bottom-flet">
+                  <span class="flet">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-div2">
+            <img src="./img/project-2.webp" alt="" />
+            <div class="portfolio-div-text ">
+              <span class="connect">Empower</span>
+              <div class="txt-bottom">
+                <h4>Digital Marketing<br> Campaign</h4>
+                <div class="bottom-flet">
+                  <span class="flet">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-div3">
+            <img src="./img/project-3.webp" alt="" />
+            <div class="portfolio-div-text">
+              <span class="connect">Support</span>
+              <div class="txt-bottom">
+                <h4>Interactive Learning <br> Platform</h4>
+                <div class="bottom-flet">
+                  <span class="flet">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="portfolio-div4">
+            <img src="./img/project-4.webp" alt="" />
+            <div class="portfolio-div-text">
+              <span class="connect">Business</span>
+              <div class="txt-bottom">  
+                <h4>Environmental Impact<br> Dashboard</h4>
+                <div class="bottom-flet">
+                  <span class="flet">
+                    <i class="fa-solid fa-arrow-right"></i>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
