--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       </div>
     </div>
     <div class="center container">
-      <div class="secand-hedar">
+      <div class="secand-hedar container">
         <div class="secand-hedar-1">
           <svg
             class="wining-section-svg"
@@ -425,13 +425,13 @@
           </svg>
           <h3>Choose the Best</h3>
         </div>
+        <h2>
+          Empowering Business<br />
+          with<span> Expertise.</span>
+        </h2>
       </div>
-      <h2>
-        Empowering Business<br />
-        with<span> Expertise.</span>
-      </h2>
 
-      <div class="card-main">
+      <div class="card-main container">
         <div class="card-container">
           <div class="card">
             <i class="fa-regular fa-lightbulb fa-10x"></i>
@@ -522,8 +522,8 @@
       </div>
     </div>
 
-    <div class="servise container">
-      <div class="row">
+    <div class="servise">
+      <div class="row container">
         <div class="row-1">
           <img src="./img/about-1.webp" alt="" />
           <div class="row-top-laft">
@@ -1158,23 +1158,6 @@
                 </div>
               </div>
             </div>
-             <div class="card-main-hp">
-              <i class="fa-solid fa-quote-right fa-6x"></i>
-              <p>
-                Working with Bexon has been a game-changer for our business.
-                Their team's professionalism, attention to detail, and
-                innovative solutions have helped us streamline operations and
-                achieve our goals faster than we imagined. We truly feel like a
-                valued partner.
-              </p>
-              <div class="card-text-demo">
-                <img src="./img/client-1.webp" alt="" />
-                <div class="card-text">
-                  <h4>Guy Hawkins</h4>
-                  <p>Co. Founder</p>
-                </div>
-              </div>
-            </div>
             <div class="card-main-hp">
               <i class="fa-solid fa-quote-right fa-6x"></i>
               <p>
@@ -1227,7 +1210,23 @@
               </div>
             </div>
             <div class="card-main-hp">
-
+              <i class="fa-solid fa-quote-right fa-6x"></i>
+              <p>
+                Working with Bexon has been a game-changer for our business.
+                Their team's professionalism, attention to detail, and
+                innovative solutions have helped us streamline operations and
+                achieve our goals faster than we imagined. We truly feel like a
+                valued partner.
+              </p>
+              <div class="card-text-demo">
+                <img src="./img/client-1.webp" alt="" />
+                <div class="card-text">
+                  <h4>Guy Hawkins</h4>
+                  <p>Co. Founder</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-main-hp">
               <i class="fa-solid fa-quote-right fa-6x"></i>
               <p>
                 Working with Bexon has been a game-changer for our business.
