--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,109 @@
         </div>
       </div>
     </div>
+    <div class="faq-section ">
+      <div class="faq-center container">
+        <div class="center-row-1">
+          <img src="./img/faq.webp" alt="" />
+          <div class="center-row-laft">
+            <div class="center-row-ph">
+              <span class="center-row-text">Get Started <br>Free Call?</span>
+              <h2>13K</h2>
+              <p>
+                Decades of Experience,<br />
+                Endless Innovation
+              </p>
+            </div>
+          </div>
+          <div class="title-hedar-of">
+            <h3>
+              Need Help? Start </br>Here...
+            </h3>
+          </div>
+        </div>
+        <div class="center-row-2">
+          <div class="dropdown-row-2">
+            <input type="checkbox" id="dropdown-toggle-1" />
+            <label for="dropdown-toggle-1" class="dropdown-label-hedar">
+              What services does Bexon offer to clients?
+            </label>
+            <ul class="dropdown-menu-text">
+              <li>
+                Getting started is easy! Simply reach out to us through our
+                contact form or give us a call, and we’ll schedule a
+                consultation to discuss your project and how we can best assist
+                you. Our team keeps you informed throughout the process,
+                ensuring quality control and timely delivery.
+              </li>
+            </ul>
+          </div>
 
+          <div class="dropdown-row-2">
+            <input type="checkbox" id="dropdown-toggle-2" />
+            <label for="dropdown-toggle-2" class="dropdown-label-hedar">
+              How do I get started with Corporate Business?
+            </label>
+            <ul class="dropdown-menu-text">
+              <li>
+                Getting started is easy! Simply reach out to us through our
+                contact form or give us a call, and we’ll schedule a
+                consultation to discuss your project and how we can best assist
+                you. Our team keeps you informed throughout the process,
+                ensuring quality control and timely delivery.
+              </li>
+            </ul>
+          </div>
+
+          <div class="dropdown-row-2">
+            <input type="checkbox" id="dropdown-toggle-3" />
+            <label for="dropdown-toggle-3" class="dropdown-label-hedar">
+              How do you ensure the success of a project?
+            </label>
+            <ul class="dropdown-menu-text">
+              <li>
+                Getting started is easy! Simply reach out to us through our
+                contact form or give us a call, and we’ll schedule a
+                consultation to discuss your project and how we can best assist
+                you. Our team keeps you informed throughout the process,
+                ensuring quality control and timely delivery.
+              </li>
+            </ul>
+          </div>
+
+          <div class="dropdown-row-2">
+            <input type="checkbox" id="dropdown-toggle-4" />
+            <label for="dropdown-toggle-4" class="dropdown-label-hedar">
+              How long will it take to complete my project?
+            </label>
+            <ul class="dropdown-menu-text">
+              <li>
+                Getting started is easy! Simply reach out to us through our
+                contact form or give us a call, and we’ll schedule a
+                consultation to discuss your project and how we can best assist
+                you. Our team keeps you informed throughout the process,
+                ensuring quality control and timely delivery.
+              </li>
+            </ul>
+          </div>
+
+          <div class="dropdown-row-2">
+            <input type="checkbox" id="dropdown-toggle-5" />
+            <label for="dropdown-toggle-5" class="dropdown-label-hedar">
+              Can I track the progress of my project?
+            </label>
+            <ul class="dropdown-menu-text">
+              <li>
+                Getting started is easy! Simply reach out to us through our
+                contact form or give us a call, and we’ll schedule a
+                consultation to discuss your project and how we can best assist
+                you. Our team keeps you informed throughout the process,
+                ensuring quality control and timely delivery.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("myModal");
